// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hMcTQn FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fOjCuh FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 fZhFXE TextArea__StyledInput-sc-ixw2m3-0 sKZiD"
          disabled=""
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hMcTQn FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYTnbH FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dqvSYp TextArea__StyledInput-sc-ixw2m3-0 sKZiD"
          placeholder="Please write a story"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hMcTQn FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <span
        class="StyledText-sc-1sadyjn-0 iSRQOX"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 iYTnbH FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dqvSYp TextArea__StyledInput-sc-ixw2m3-0 sKZiD"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hMcTQn FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <label
        class="StyledText-sc-1sadyjn-0 gGKbiL"
        for="some-text"
      >
        A helpful area of text
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 iYTnbH FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dqvSYp TextArea__StyledInput-sc-ixw2m3-0 sKZiD"
          id="some-text"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hMcTQn FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 cOmkcD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dqvSYp TextArea__StyledInput-sc-ixw2m3-0 sKZiD"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 OmJsh"
      >
        There is something very wrong!
      </span>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hMcTQn FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYTnbH FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dqvSYp TextArea__StyledInput-sc-ixw2m3-0 sKZiD"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fWPyPA"
      >
        Some useful information
      </span>
    </div>
  </div>
</div>
`;
